--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server/src/index.js --ext js,graphql --watch server --exec babel-node"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +39,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-arrow-functions": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "dotenv-defaults": "^2.0.1",
+    "graphql-yoga": "^1.18.3",
+    "mongoose": "^5.11.9",
+    "nodemon": "^2.0.6"
   }
 }
